2015-05-05  Tim Horton  <timothy_horton@apple.com>

        Fix the build.

        * UIProcess/mac/WKViewLayoutStrategy.mm:
        (-[WKViewDynamicSizeWithMinimumViewSizeLayoutStrategy updateLayout]):

2015-05-05  Timothy Horton  <timothy_horton@apple.com>

        Add a layout mode for computing fixed layout size from a minimum size
        https://bugs.webkit.org/show_bug.cgi?id=144610
        <rdar://problem/19790341>

        Reviewed by Simon Fraser.

        Add a layout mode where WebKit determines the layout size with a set of
        (still in flux) heuristics, trying hard to keep the page usable below a
        particular client-defined threshold view size.

        This can mean that WebKit will start scaling down the page inside the view
        to make the whole page fit, using the viewScale mechanism.

        * UIProcess/API/C/WKLayoutMode.h:
        * UIProcess/API/Cocoa/_WKLayoutMode.h:
        Add the new layout mode, and documentation for the two complicated ones.
        
        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView _layoutMode]):
        (-[WKWebView _setLayoutMode:]):
        (-[WKWebView _setViewScale:]):
        (-[WKWebView _setMinimumViewSize:]):
        (-[WKWebView _minimumViewSize]):
        * UIProcess/API/Cocoa/WKWebViewPrivate.h:
        Forward the layoutMode and viewScale parameters to WKView if we have one.

        * UIProcess/API/Cocoa/WKViewPrivate.h:
        * UIProcess/API/mac/WKView.mm:
        (-[WKView dealloc]):
        (-[WKView viewWillStartLiveResize]):
        (-[WKView viewDidEndLiveResize]):
        (-[WKView setFrameSize:]):
        (-[WKView initWithFrame:processPool:configuration:webView:]):
        (-[WKView disableFrameSizeUpdates]):
        (-[WKView enableFrameSizeUpdates]):
        (-[WKView frameSizeUpdatesDisabled]):
        (-[WKView _layoutMode]):
        (-[WKView _setLayoutMode:]):
        (-[WKView _setViewScale:]):
        (-[WKView _setMinimumViewSize:]):