@@ -102,13 +102,16 @@ CGColorSpaceRef LayerHostingContext::colorSpace() const
     return [m_context colorSpace];
 }
 
+#if PLATFORM(IOS) || __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
 void LayerHostingContext::setFencePort(mach_port_t fencePort)
 {
-#if PLATFORM(IOS) || __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
     [m_context setFencePort:fencePort];
-#else
-    ASSERT_NOT_REACHED();
-#endif
 }
+#else
+NO_RETURN_DUE_TO_ASSERT void LayerHostingContext::setFencePort(mach_port_t fencePort)
+{
+    ASSERT_NOT_REACHED();
+}
+#endif
 
 } // namespace WebKit
